Rename missing instances of pricing card

--- a/apps/docs/content/components/PricingOptions.mdx
+++ b/apps/docs/content/components/PricingOptions.mdx
@@ -1,5 +1,5 @@
 ---
-title: Pricing cards
+title: Pricing options
 status: Experimental
 a11yReviewed: false
 source: https://github.com/primer/brand/blob/main/packages/react/src/PricingOptions/PricingOptions.tsx
