--- a/apps/docs/content/components/PricingOptions.mdx
+++ b/apps/docs/content/components/PricingOptions.mdx
@@ -14,7 +14,7 @@ import {PropTableValues} from '../../src/components'
 import {
 
 ```js
-import {EyebrowBanner} from '@primer/react-brand'
+import { PricingOptions } from '@primer/react-brand'
 ```
 
 ## Examples
