--- a/apps/docs/content/components/PricingOptions.mdx
+++ b/apps/docs/content/components/PricingOptions.mdx
@@ -19,7 +19,7 @@ import { PricingOptions } from '@primer/react-brand'
 
 ## Examples
 
-### Default presentation
+### Default
 
 ```jsx live
 <PricingOptions>
