--- a/apps/docs/content/components/PricingOptions.mdx
+++ b/apps/docs/content/components/PricingOptions.mdx
@@ -675,7 +675,7 @@ Use `PricingOptions.FeatureListItem` with `variant="included"` and `variant="exc
 
 | Name           | Type                  |  Default  | required | Description                         |
 | :------------- | :-------------------- | :-------: | :------: | :---------------------------------- |
-| `as`           | `section , div`       | `section` | `false`  | Applies the underlying HTML element |
+| `as`           | <PropTableValues values={[`section`, `div` ]} addLineBreaks />       | `section` | `false`  | Applies the underlying HTML element |
 | `children`     | `PricingOptions.Item` |           |  `true`  | Applies the underlying HTML element |
 | `presentation` | `default, cards`      |           | `false`  | The presentation styling            |
 
