--- a/apps/docs/content/components/PricingOptions.mdx
+++ b/apps/docs/content/components/PricingOptions.mdx
@@ -157,7 +157,7 @@ import { PricingOptions } from '@primer/react-brand'
 </PricingOptions>
 ```
 
-### One item
+### One option
 
 This is the one-item layout for the pricing options component
 
@@ -184,7 +184,7 @@ This is the one-item layout for the pricing options component
 </PricingOptions>
 ```
 
-### Two items
+### Two options
 
 This is the two-item layout for the pricing options component.
 
@@ -255,118 +255,18 @@ This is the two-item layout for the pricing options component.
 </PricingOptions>
 ```
 
-### Three items
+### Three options
 
 This is the three-item layout for the pricing options component.
 
 ```jsx live
-<PricingOptions>
-  <PricingOptions.Item>
-    <PricingOptions.Heading>Copilot Individual</PricingOptions.Heading>
-    <PricingOptions.Description>
-      Code completions, Chat, and more for indie developers and freelancers.
-    </PricingOptions.Description>
-    <PricingOptions.Price
-      currencySymbol="$"
-      trailingText="per month / $100 per year"
-    >
-      10
-    </PricingOptions.Price>
-    <PricingOptions.FeatureList>
-      <PricingOptions.FeatureListItem>
-        Code completions
-      </PricingOptions.FeatureListItem>
-      <PricingOptions.FeatureListItem>
-        Chat in IDE and Mobile
-      </PricingOptions.FeatureListItem>
-      <PricingOptions.FeatureListItem>
-        CLI assistance
-      </PricingOptions.FeatureListItem>
-      <PricingOptions.FeatureListItem>
-        Security vulnerability filter
-      </PricingOptions.FeatureListItem>
-    </PricingOptions.FeatureList>
-    <PricingOptions.Footnote>
-      Free for verified students, teachers, and maintainers of popular open
-      source projects.
-    </PricingOptions.Footnote>
-    <PricingOptions.PrimaryAction href="/buy">
-      Start a free trial
-    </PricingOptions.PrimaryAction>
-  </PricingOptions.Item>
-
-  <PricingOptions.Item>
-    <PricingOptions.Label>Recommended</PricingOptions.Label>
-    <PricingOptions.Heading>Copilot Business</PricingOptions.Heading>
-    <PricingOptions.Description>
-      Copilot personalized to your organization.
-    </PricingOptions.Description>
-    <PricingOptions.Price currencySymbol="$" trailingText="per user / month">
-      19
-    </PricingOptions.Price>
-    <PricingOptions.PrimaryAction href="/buy">
-      Buy now
-    </PricingOptions.PrimaryAction>
-    <PricingOptions.SecondaryAction href="/contact">
-      Contact sales
-    </PricingOptions.SecondaryAction>
-    <PricingOptions.FeatureList>
-      <PricingOptions.FeatureListItem>
-        Everything in Copilot Individual plus:
-      </PricingOptions.FeatureListItem>
-      <PricingOptions.FeatureListItem>
-        Chat in IDE and Mobile
-      </PricingOptions.FeatureListItem>
-      <PricingOptions.FeatureListItem>
-        CLI assistance
-      </PricingOptions.FeatureListItem>
-      <PricingOptions.FeatureListItem>
-        Security vulnerability filter
-      </PricingOptions.FeatureListItem>
-      <PricingOptions.FeatureListItem>
-        Code referencing
-      </PricingOptions.FeatureListItem>
-      <PricingOptions.FeatureListItem>
-        Public code filter
-      </PricingOptions.FeatureListItem>
-      <PricingOptions.FeatureListItem>
-        IP indemnity
-      </PricingOptions.FeatureListItem>
-      <PricingOptions.FeatureListItem>
-        Enterprise-grade security, safety, and privacy
-      </PricingOptions.FeatureListItem>
-    </PricingOptions.FeatureList>
-  </PricingOptions.Item>
-
-  <PricingOptions.Item>
-    <PricingOptions.Label>Available Feb 2024</PricingOptions.Label>
-    <PricingOptions.Heading>Copilot Enterprise</PricingOptions.Heading>
-    <PricingOptions.Description>
-      Copilot personalized to your organization throughout the software
-      development lifecycle. Requires GitHub Enterprise Cloud.
-    </PricingOptions.Description>
-    <PricingOptions.Price currencySymbol="$" trailingText="per user / month">
-      39
-    </PricingOptions.Price>
-    <PricingOptions.FeatureList>
-      <PricingOptions.FeatureListItem>
-        Everything in Copilot Business plus:
-      </PricingOptions.FeatureListItem>
-      <PricingOptions.FeatureListItem>
-        Chat in IDE and Mobile
-      </PricingOptions.FeatureListItem>
-      <PricingOptions.FeatureListItem>
-        CLI assistance
-      </PricingOptions.FeatureListItem>
-      <PricingOptions.FeatureListItem>
-        Code completions
-      </PricingOptions.FeatureListItem>
-    </PricingOptions.FeatureList>
-    <PricingOptions.PrimaryAction href="/waitlist">
-      Join waitlist
-    </PricingOptions.PrimaryAction>
-  </PricingOptions.Item>
-</PricingOptions>
+<Note>
+  `PricingOptions` is designed to fill the width of the page's main container,
+  thus it cannot be accurately represented within the narrower container of this
+  documentation. Please refer to our [Storybook
+  examples](https://primer.style/brand/storybook/?path=/story/components-pricingoptions-features--three-items)
+  to see the component in a full-width context as originally intended.
+</Note>
 ```
 
 ### Feature list sets
@@ -730,10 +630,10 @@ One item per pricing plan to be displayed. Maximum of 3 items.
 
 ### PricingOptions.FeatureListItem
 
-| Name       | Type                 |   Default   | required | Description                         |
-| :--------- | :------------------- | :---------: | :------: | :---------------------------------- |
-| `children` | `ReactNode`          | `undefined` |  `true`  | The item of the feature list set    |
-| `variant`  | `included, excluded` | `included`  | `false`  | The variant of the feature list set |
+| Name       | Type                                                                 |   Default   | required | Description                         |
+| :--------- | :------------------------------------------------------------------- | :---------: | :------: | :---------------------------------- |
+| `children` | `ReactNode`                                                          | `undefined` |  `true`  | The item of the feature list set    |
+| `variant`  | <PropTableValues values={[`included`, `excluded` ]} addLineBreaks /> | `included`  | `false`  | The variant of the feature list set |
 
 ### PricingOptions.Footnote
 
