--- a/apps/docs/content/components/SubNav/index.mdx
+++ b/apps/docs/content/components/SubNav/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: SubNav
-description: Use the SubNav component to 
+title: Sub nav
+description: A sub nav is a secondary navigation element, typically positioned beneath a primary navigation.
 ---
 
 import CustomVideoPlayer from '../../../src/components/custom-video-player'
@@ -123,7 +123,7 @@ The call to action label indicates the action or resource the card links to. It 
 
 ### Border
 
-Card offers a variation with a border. Border is disabled by default. 
+Card offers a variation with a border. Border is disabled by default.
 
 ## Related components
 
