--- a/apps/docs/content/components/SubNav/react.mdx
+++ b/apps/docs/content/components/SubNav/react.mdx
@@ -6,8 +6,11 @@ storybook: '/brand/storybook/?path=/story/components-subnav--default'
 description: A sub nav is a secondary navigation element, typically positioned beneath a primary navigation.
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 import {Label} from '@primer/react'
-import {PropTableValues} from '../../src/components'
+import {PropTableValues} from '../../../src/components'
 
 ```js
 import {SubNav} from '@primer/react-brand'
