Add small button usage guidance

--- a/apps/docs/content/components/Button/index.mdx
+++ b/apps/docs/content/components/Button/index.mdx
@@ -124,6 +124,12 @@ Button default to a medium size. Medium is suitable for most interfaces and is c
 
 Large buttons increase the significance of an action and should be used sparingly. Use the large option when you need to emphasize the button on a big sized heading, for example in a [Hero](/components/Hero) component.
 
+Small buttons are meant to be used sparingly. Some use cases can be:
+
+- Contained inside other components like dropdowns or small popups.
+- Areas where very low priority information might display a CTA. 
+- Brand presence inside products where information is compact. For example for in-product banner.
+
 ### Arrow
 
 The arrow is shown by default in all buttons. Hide the arrow only to save horizontal space or to diminish the importance of the button.
