--- a/apps/docs/content/components/IDE.mdx
+++ b/apps/docs/content/components/IDE.mdx
@@ -213,7 +213,7 @@ A `glass` variant is available to simplify placement of the IDE on background im
   padding={48}
   borderRadius="large"
   style={{
-    backgroundImage: `url(https://placehold.co/600x400?text=Background%20Image)`,
+    backgroundImage: `url(https://github.com/primer/brand/assets/13340707/331c6fdb-3865-4384-8194-8467516376a4)`,
     backgroundRepeat: 'no-repeat',
     backgroundSize: 'cover',
     backgroundPosition: 'center',
