add small button to docs

--- a/apps/docs/content/components/Button/react.mdx
+++ b/apps/docs/content/components/Button/react.mdx
@@ -49,6 +49,7 @@ The `subtle` variant of Button indicates that the action is a low priority one.
 
 ```jsx live
 <Stack direction="vertical" alignItems="flex-start">
+  <Button size="small">Register now</Button>
   <Button size="medium">Register now</Button>
   <Button size="large">Register now</Button>
 </Stack>
