--- a/apps/docs/content/components/Tooltip.mdx
+++ b/apps/docs/content/components/Tooltip.mdx
@@ -43,7 +43,7 @@ Use this with caution. It is generally better to use a visible label for better 
 
 ```jsx live
 <Tooltip text="Go fullscreen" type="label">
-    <Button><ScreenFullIcon /></Button>
+    <Button hasArrow={false}><ScreenFullIcon /></Button>
 </Tooltip>
 ```
 
