hotfixes for subnav and ide components

--- a/apps/docs/content/components/SubNav.mdx
+++ b/apps/docs/content/components/SubNav.mdx
@@ -92,9 +92,10 @@ import {SubNav} from '@primer/react-brand'
 
 ### SubNav <Label>Required</Label>
 
-| name        | type      | default | required | description                                                  |
-| ----------- | --------- | ------- | -------- | ------------------------------------------------------------ |
-| `hasShadow` | `boolean` | `false` | `false`  | Applies optional shadow, along with a fixed background color |
+| name        | type      | default | required | description                                                                   |
+| ----------- | --------- | ------- | -------- | ----------------------------------------------------------------------------- |
+| `hasShadow` | `boolean` | `false` | `false`  | Applies optional shadow, along with a fixed background color                  |
+| `fullWidth` | `boolean` | `false` | `false`  | Allows the SubNav to be used at full width, removing default internal padding |
 
 ### SubNav.Heading <Label>Required</Label>
 
