Apply suggestion from @rezrah
Co-authored-by: Rez <13340707+rezrah@users.noreply.github.com>

--- a/apps/docs/content/components/Tooltip.mdx
+++ b/apps/docs/content/components/Tooltip.mdx
@@ -51,7 +51,7 @@ Use this with caution. It is generally better to use a visible label for better 
 
 | name         | type                                                              | default         | required | description                             |
 | ------------ | ----------------------------------------------------------------- | --------------- | -------- | --------------------------------------- |
-| `direction`  | <PropTableValues values={['n', 'e', 's', 'w']} />                 | `'s'`           | `false`  | The text to be displayed in the tooltip |
-| `text`       | `string`                                                          | `undefined`     | `true`   | Determines whether the ActionMenu is open by default |
+| `direction`  | <PropTableValues values={['n', 'e', 's', 'w']} />                 | `'s'`           | `false`  | The side the tooltip appears on |
+| `text`       | `string`                                                          | `undefined`     | `true`   |  The text to be displayed in the tooltip |
 | `type`       | <PropTableValues values={['description', 'label']} />             | `'description'` | `false`  | The type of tooltip. `label` is used for labelling the element that triggers tooltip. `description` is used for describing or adding a suplementary information to the element that triggers the tooltip. |
 
