rm live Tooltip previews

--- a/apps/docs/content/components/Tooltip.mdx
+++ b/apps/docs/content/components/Tooltip.mdx
@@ -17,7 +17,7 @@ import {Tooltip} from '@primer/react-brand'
 
 ### Default
 
-```jsx live
+```jsx
 <Tooltip text="Sample tooltip content">
     <Button>Action</Button>
 </Tooltip>
@@ -29,7 +29,7 @@ By default, tooltips appear below the element. You can change the direction by p
 
 As long as there is enough room in the viewport, the tooltip will appear in the specified direction. If there is not enough room, the tooltip will appear in whatever direction it can place the tooltip without overflowing the viewport.
 
-```jsx live
+```jsx
 <Tooltip text="Sample tooltip content" direction="e">
     <Button>Action</Button>
 </Tooltip>
@@ -41,7 +41,7 @@ If a ubiquitously understood icon is used in place of a text label, you can use 
 
 Use this with caution. It is generally better to use a visible label for better usability and accessibility.
 
-```jsx live
+```jsx
 <Tooltip text="Go fullscreen" type="label">
     <Button hasArrow={false}><ScreenFullIcon /></Button>
 </Tooltip>
